Crear archivo Docker File incluye la versión de Alpaquita y Bellsoft que son mas optimizadas en JettraWebExample
Actualiza la documentacion de ModelReportHeader.ReportType.MASTER y ModelReportHeader.ReportType.MASTER: en JettraReport/guide/book.md